--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@astrojs/tailwind": "^5.1.0",
     "astro": "^4.0.6",
+    "astro-expressive-code": "^0.35.3",
     "tailwindcss": "^3.4.3"
   }
 }
