--- a/package.json
+++ b/package.json
@@ -14,5 +14,9 @@
     "astro": "^4.0.6",
     "astro-expressive-code": "^0.35.3",
     "tailwindcss": "^3.4.3"
+  },
+  "devDependencies": {
+    "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@tailwindcss/typography": "^0.5.13"
   }
 }
