--- a/package.json
+++ b/package.json
@@ -10,13 +10,7 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/tailwind": "^5.1.0",
     "astro": "^4.0.6",
-    "astro-expressive-code": "^0.35.3",
-    "tailwindcss": "^3.4.3"
-  },
-  "devDependencies": {
-    "@tailwindcss/aspect-ratio": "^0.4.2",
-    "@tailwindcss/typography": "^0.5.13"
+    "astro-expressive-code": "^0.35.3"
   }
 }
